Fix notification pill overlap with platform tags

--- a/style.css
+++ b/style.css
@@ -377,7 +377,7 @@ nav {
   animation-delay: -1.5s;
 }
 .hw-notif-2 {
-  bottom: 40px;
+  bottom: 110px;
   left: -24px;
   animation-delay: -3s;
 }
